--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
       Check out the github coming soon.<br>Liquidity is very limited on Pegasys
     DEX so please don't wipe it out.</p>
 <img src="https://s3.us-west-2.amazonaws.com/uttkoin.com/StaticAgeLogopng.png" alt="Brrrrgggggghhhh">
-      <a href="mailto:chris@idontgiveafuttke.com?subject=feedback">chris@idontgiveafuttke.com</a>
+      <a href="https://github.com/chrisuttke/uttkoin">GITHUB</a>
   </body>
 </html>
