--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <br>
     <p>Uttkoin is a shitcoin I made on
       the Syscoin NEVM when high. No plans or anything. Just having fun.
-      Check out the github coming soon.<br>Liquidity is very limited on Pegasys
+      Check out the github, link below.<br>Liquidity is very limited on Pegasys
     DEX so please don't wipe it out.</p>
 <img src="https://s3.us-west-2.amazonaws.com/uttkoin.com/StaticAgeLogopng.png" alt="Brrrrgggggghhhh">
       <a href="https://github.com/chrisuttke/uttkoin">GITHUB</a>
