--- a/index.html
+++ b/index.html
@@ -14,31 +14,69 @@
         margin-left: auto;
         margin-right: auto;
         width: 50%;}
-        a:link, a:visited {
-    background-color: white;
-    color: black;
-    border: 2px solid green;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline;
-    }
-    a:hover, a:active {
-    background-color: green;
-    color: white;
-    }
+      #dexscreener-embed{position:relative;width:100%;padding-bottom:125%;}@media(min-width:1400px){#dexscreener-embed{padding-bottom:65%;}}#dexscreener-embed iframe{position:absolute;width:100%;height:100%;top:0;left:0;border:0;}  
     </style>
+
     <meta charset="utf-8">
+
     <title>Uttkoin</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QVF0V9FJ99"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QVF0V9FJ99');
+</script>
+
   </head>
+
   <body>
-    <h1>Uttkoin.com (UTTKE)</h1>
+    <h1>Uttkoin (UTTKE)</h1>
+
     <br>
+
     <p>Uttkoin is a shitcoin I made on
       the Syscoin NEVM when high. No plans or anything. Just having fun.
       Check out the github, link below.<br>Liquidity is very limited on Pegasys
     DEX so please don't wipe it out.</p>
-<img src="https://s3.us-west-2.amazonaws.com/uttkoin.com/StaticAgeLogopng.png" alt="Brrrrgggggghhhh">
-      <a href="https://github.com/chrisuttke/uttkoin">GITHUB</a>
+
+    <a href="https://github.com/chrisuttke/uttkoin">
+      <h1>GITHUB</h1>
+    </a>
+
+    <a href="https://twitter.com/chrisuttke">
+      <h1>TWITTER</h1>
+    </a>
+
+    <a href="https://t.me/uttkoin">
+      <h1>TELEGRAM</h1>
+    </a>
+
+    <a href="https://www.reddit.com/r/uttkoin/">
+      <h1>REDDIT</h1>
+    </a>
+
+    <a href="https://s3.us-west-2.amazonaws.com/uttkoin.com/whitepaper.pdf">
+      <h1>WHITEPAPER</h1>
+    </a>
+
+
+<a href="https://app.pegasys.finance/#/swap?outputCurrency=0xbbbeb0e02afea4d30340961e8e541054b91b668f">
+<img src="https://s3.us-west-2.amazonaws.com/uttkoin.com/5.png" alt="Pegasys DEX">
+<p>Buy on Pegasys DEX</p>
+</a>
+
+<div id="dexscreener-embed">
+  <iframe src="https://dexscreener.com/syscoin/0x90eFc30d84f8ca04450256C1922BB91893e7e17d?embed=1&theme=dark">
+  </iframe></div>
+
+<a href="https://explorer.syscoin.org/token/0xBbBEB0E02aFEA4D30340961E8E541054b91B668F/token-transfers">
+<p>Explore contract address: 0xBbBEB0E02aFEA4D30340961E8E541054b91B668F</p>
+</a>
+
   </body>
+
 </html>
