--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         margin-left: auto;
         margin-right: auto;
         width: 50%;}
-      #dexscreener-embed{position:relative;width:100%;padding-bottom:125%;}@media(min-width:1400px){#dexscreener-embed{padding-bottom:65%;}}#dexscreener-embed iframe{position:absolute;width:100%;height:100%;top:0;left:0;border:0;}  
+      #dexscreener-embed{position:relative;width:100%;padding-bottom:125%;}@media(min-width:1400px){#dexscreener-embed{padding-bottom:65%;}}#dexscreener-embed iframe{position:absolute;width:100%;height:100%;top:0;left:0;border:0;}
     </style>
 
     <meta charset="utf-8">
@@ -36,12 +36,21 @@
   <body>
     <h1>Uttkoin (UTTKE)</h1>
 
+    <div id="dexscreener-embed">
+      <iframe src="https://dexscreener.com/syscoin/0x90eFc30d84f8ca04450256C1922BB91893e7e17d?embed=1&theme=dark">
+      </iframe>
+    </div>
+
     <br>
 
-    <p>Uttkoin is a shitcoin I made on
+    <h2>
+      Uttkoin is a shitcoin I made on
       the Syscoin NEVM when high. No plans or anything. Just having fun.
-      Check out the github, link below.<br>Liquidity is very limited on Pegasys
-    DEX so please don't wipe it out.</p>
+      Check out the github, link below.
+      <br>
+      Liquidity is very limited on Pegasys
+      DEX so please don't wipe it out.
+    </h2>
 
     <a href="https://github.com/chrisuttke/uttkoin">
       <h1>GITHUB</h1>
@@ -56,7 +65,11 @@
     </a>
 
     <a href="https://www.reddit.com/r/uttkoin/">
-      <h1>REDDIT</h1>
+      <h1>REDDIT WAS BANNED!</h1>
+    </a>
+
+    <a href="https://discord.gg/5yMw66tb">
+      <h1>DISCORD</h1>
     </a>
 
     <a href="https://s3.us-west-2.amazonaws.com/uttkoin.com/whitepaper.pdf">
@@ -68,10 +81,6 @@
 <img src="https://s3.us-west-2.amazonaws.com/uttkoin.com/5.png" alt="Pegasys DEX">
 <p>Buy on Pegasys DEX</p>
 </a>
-
-<div id="dexscreener-embed">
-  <iframe src="https://dexscreener.com/syscoin/0x90eFc30d84f8ca04450256C1922BB91893e7e17d?embed=1&theme=dark">
-  </iframe></div>
 
 <a href="https://explorer.syscoin.org/token/0xBbBEB0E02aFEA4D30340961E8E541054b91B668F/token-transfers">
 <p>Explore contract address: 0xBbBEB0E02aFEA4D30340961E8E541054b91B668F</p>
