--- a/index.html
+++ b/index.html
@@ -43,15 +43,6 @@
 
     <br>
 
-    <h2>
-      Uttkoin is a shitcoin I made on
-      the Syscoin NEVM when high. No plans or anything. Just having fun.
-      Check out the github, link below.
-      <br>
-      Liquidity is very limited on Pegasys
-      DEX so please don't wipe it out.
-    </h2>
-
     <a href="https://github.com/chrisuttke/uttkoin">
       <h1>GITHUB</h1>
     </a>
@@ -76,10 +67,20 @@
       <h1>WHITEPAPER</h1>
     </a>
 
+    <p>
+      Uttkoin is a shitcoin I made on
+      the Syscoin NEVM when high. Some plans in the works, let's see where it goes.
+      <br>
+      Liquidity is very limited on Pegasys
+      DEX so please don't wipe it out.
+    </p>
 
 <a href="https://app.pegasys.finance/#/swap?outputCurrency=0xbbbeb0e02afea4d30340961e8e541054b91b668f">
-<img src="https://s3.us-west-2.amazonaws.com/uttkoin.com/5.png" alt="Pegasys DEX">
-<p>Buy on Pegasys DEX</p>
+  <img src="https://s3.us-west-2.amazonaws.com/uttkoin.com/5.png" alt="Pegasys DEX">
+  <p>
+    Buy on Pegasys DEX
+  </p>
+  <img src="https://s3.us-west-2.amazonaws.com/uttkoin.com/qrcode_trade.png" alt="Trade Uttkoin">
 </a>
 
 <a href="https://explorer.syscoin.org/token/0xBbBEB0E02aFEA4D30340961E8E541054b91B668F/token-transfers">
